--- a/macos.local/flake/home/programs/core.nix.org
+++ b/macos.local/flake/home/programs/core.nix.org
@@ -34,6 +34,7 @@ Import configurations for programs and install programs with no configuration.
       go
       gopls
       gpgme
+      haskell-language-server
       htop
       hunspell
       hyfetch # TODO: configure
@@ -60,6 +61,7 @@ Import configurations for programs and install programs with no configuration.
       rustup
       shellcheck
       shfmt
+      stack
       texliveFull
       typescript-language-server
       vscode-langservers-extracted
