--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -396,7 +396,7 @@ Define an =eshell= command to reinstall and update my dotfiles.
    "run the argument through make at the root of my dotfiles repository"
    (let ((dir (eshell/pwd)))
     (eshell/cd "~/.dotfiles")
-    (compile (concat "make " arg) t)
+    (compile (concat "make " arg))
     (eshell/cd dir)))
 #+end_src
 
