--- a/common/.flake/home/fonts.nix.org
+++ b/common/.flake/home/fonts.nix.org
@@ -3,13 +3,15 @@
 Install fonts necessary for my configuration. Namely
 - Computer Modern
 - Source Code Pro (Nerd Font)
-#+begin_src nix :tangle ~/.flake/home/fonts.nix :mkdirp yes
+#+begin_src nix
   { config, pkgs, ... }:
 
   {
     fonts.fontconfig.enable = true;
     home.packages = with pkgs; [
+      atkinson-hyperlegible-mono
       cm_unicode
+      nerd-fonts.symbols-only
       nerd-fonts.sauce-code-pro
     ];
   }
