--- a/common/.config/emacs/early-init.el.org
+++ b/common/.config/emacs/early-init.el.org
@@ -28,15 +28,8 @@ Clean up interface by removing unnecessary elements.
 
 Set up fonts. I use Source Code Pro (Nerd Font) for =monospace= and Computer Modern for /variable width/.
 #+begin_src emacs-lisp
-  (defvar jj/mono-font)
-  (defvar jj/var-font)
-  (pcase system-type
-    (`gnu/linux
-     (setq jj/mono-font "SauceCodePro Nerd Font-11"
-           jj/var-font "CMU Serif-14"))
-    (`darwin
-     (setq jj/mono-font "SauceCodePro Nerd Font-14:weight=thin"
-           jj/var-font "CMU Serif-18")))
+  (defvar jj/mono-font "Atkinson Hyperlegible Mono-11:weight=thin")
+  (defvar jj/var-font "CMU Serif-18")
   (add-to-list 'default-frame-alist
                `(font . ,jj/mono-font))
   (custom-set-faces
