--- a/common/.flake/home/fonts.nix.org
+++ b/common/.flake/home/fonts.nix.org
@@ -1,6 +1,7 @@
 #+title: Font Configuration
 
 Install fonts necessary for my configuration. Namely
+- Atkinson Hyperlegible Mono
 - Computer Modern
 - Source Code Pro (Nerd Font)
 #+begin_src nix
@@ -9,6 +10,7 @@ Install fonts necessary for my configuration. Namely
   {
     fonts.fontconfig.enable = true;
     home.packages = with pkgs; [
+      atkinson-hyperlegible-next
       atkinson-hyperlegible-mono
       cm_unicode
       nerd-fonts.symbols-only
