--- a/common/.config/emacs/early-init.el.org
+++ b/common/.config/emacs/early-init.el.org
@@ -29,7 +29,7 @@ Clean up interface by removing unnecessary elements.
 Set up fonts. I use Source Code Pro (Nerd Font) for =monospace= and Computer Modern for /variable width/.
 #+begin_src emacs-lisp
   (defvar jj/mono-font "Atkinson Hyperlegible Mono-14:weight=thin")
-  (defvar jj/var-font "CMU Serif-18")
+  (defvar jj/var-font "Atkinson Hyperlegible Next-14")
   (add-to-list 'default-frame-alist
                `(font . ,jj/mono-font))
   (custom-set-faces
