--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -135,15 +135,13 @@ Install and configure =visual-fill-column= to make some file types display with 
   (defun jj/run-visual-line-mode ()
     "run visual-line-mode"
     (visual-line-mode)
-    (visual-fill-column-mode)
-    (setq visual-fill-column-width 100
-          visual-fill-column-center-text t))
+    (visual-fill-column-mode))
   (use-package visual-fill-column
     :hook
     (org-mode . jj/run-visual-line-mode)
     (markdown-mode . jj/run-visual-line-mode)
     :config
-    (setq visual-fill-column-width 100
+    (setq-default visual-fill-column-width 150
           visual-fill-column-center-text t))
 #+end_src
 
